@@ -37,6 +37,10 @@
  * - @c "edge,left" - the list is scrolled until the left edge
  * - @c "edge,right" - the list is scrolled until the right edge
  * - @c "language,changed" - the program's language changed
+ * - @c "highlighted" - an item in the list is pressed and highlighted.
+ *   The %c event_info parameter is the item that was highlighted.
+ * - @c "unhighlighted" - an item in the list is unpressed and unhighlighted.
+ *   The %c event_info parameter is the item that was unhighlighted.
  *
  * Available styles for it are:
  * - @c "default"
